# haskell-plugin-demo

./: .gitignore  CHANGELOG.md  README.md  cabal.project  fourmolu.yaml
.github/workflows/: ci.yaml
host/: host.cabal
host/app/: Main.hs
host/app-unix/: Loader.hs
host/app-windows/: Loader.hs
host/src/Host/: Library.hs
plugin/: plugin.cabal
plugin/src/: Plugin.hs
