cabal-version: 3.8
name: host
version: 0.1.0.0
synopsis: Host application
description: Please see the README on GitHub at <https://github.com/ruifengx/haskell-plugin-demo#readme>
category: Plugin
homepage: https://github.com/ruifengx/haskell-plugin-demo#readme
bug-reports: https://github.com/ruifengx/haskell-plugin-demo/issues
author: Ruifeng Xie
maintainer: ruifengx@outlook.com
copyright: 2024 Ruifeng Xie
license: AGPL-3.0-or-later
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ruifengx/haskell-plugin-demo

common base
  default-language: GHC2021
  default-extensions:
    BlockArguments
    CApiFFI
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wmissing-deriving-strategies

common binary
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Host.Library

  build-depends:
    base ^>=4.18.2.0

executable host
  import: base, binary
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base ^>=4.18.2.0,
    host,
    unix ^>=2.8.4.0,
